deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapd
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "18082"
    prometheus.io/scrape: "true"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/component: scrapd
  ports:
    - name: public-grpc
      port: 18080
      targetPort: public-grpc
    - name: admin-grpc
      port: 18081
      targetPort: admin-grpc
    - name: metrics
      port: 18082
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: scrapd-public
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: scrapd
  ports:
    - name: public-grpc
      port: 18080
      targetPort: public-grpc
---
apiVersion: v1
kind: Service
metadata:
  name: scrapd-admin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: scrapd
  ports:
    - name: admin-grpc
      port: 18081
      targetPort: admin-grpc
